Removed unused comments. Updated schema demo class to show correct resource name for add files. Renamed "Local File System" to "Working Directories". Spelling correction. Removed unused code and corrected the imdi child resource icon. Prevented imdi child nodes being typed or hashed unless they contain a resource. Corrected path error on windows and tested on linux. Added testing default location. Removed the "Always Display" column from the edit view dialog. Display of resource images is now functional. Updated the reload child nodes function to recursively reload the child nodes. Corrected save and load of mime type and file hash data. Disabled adding corpus to the root node as it is not yet functional. Dragging a loose file to a session will now create a resource.